<resources>
    <string name="app_name">UNIVERSE VIEW</string>

    <string name="copyright" translatable="false">Copyright: </string>
    <string name="date">Date: </string>
    <string name="explanation">Explanation: </string>
    <string name="hdurl" translatable="false">Hdurl: </string>
    <string name="mediatype">Media Type: </string>
    <string name="serviceversion">Service Version: </string>
    <string name="title">Title: </string>
    <string name="url" translatable="false">URL: </string>
    <string name="amain_btn_ir">Show list</string>

    <string name="facebook_app_id">297876327242282</string>
    <string name="title_activity_login_fb">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="menuListFragment_share">Share</string>
    <string name="menuRedes_share">Share</string>
    <string name="menuRedes_favorites">Favorites</string>

    <!-- activity detail-->

    <string name="adetail_tv_cameraFullName">Camera full name: </string>
    <string name="adetail_tv_earthDate">Earth date: </string>
    <string name="adetail_tv_roverLandingdate">Rover landing date: </string>
    <string name="adetail_btn_regresar">Return</string>
    <string name="flist_favoritemr_titulo">Mars rovers favorites</string>
    <string name="todayAPOD">Astronomy Picture of the Day</string>
    <string name="marsRoverImages">Mars Rovers Images</string>
    <string name="compartir">Share</string>
    <string name="addFavorites">Adding to favorites</string>
    <string name="apod">APOD: </string>
    <string name="menuListFragment_refresh">Refresh</string>
    <string name="flist_favoriteapod_titulo">Favorite APOD</string>
    <string name="menuRedes_favoritesMR">MR Favorite Images</string>
    <string name="menuRedes_favoritesAPOD">APOD Favorite Images</string>
    <string name="msgEliminado">Deleted item</string>
    <string name="qDelete">Delete?</string>
    <string name="refresh">Refresh done</string>


</resources>
