<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    tools:context="mx.nitrogena.dadm.mod5.nasa.MainActivity">


    <!-- android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    -->


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_layout_height"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".7">
        <ImageView
            android:id="@+id/amain_iv_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:src="@mipmap/ic_launcher"
            android:scaleType="fitXY"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/amain_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:paddingTop="15dp"

            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="@string/date"/>
        <TextView
            android:id="@+id/amain_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/copyright"/>
            <TextView
                android:id="@+id/amain_tv_copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copyright"
                />

        </LinearLayout>
        <TextView
            android:id="@+id/amain_tv_explanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/explanation"
            />
        <!--<TextView
            android:id="@+id/amain_tv_hdurl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!" />-->
        <TextView
            android:id="@+id/amain_tv_mediaType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mediatype"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/amain_tv_serviceVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serviceversion"
            android:visibility="invisible"
            />



        <!--<TextView
            android:id="@+id/amain_tv_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!" />-->
        <Button
            android:id="@+id/amain_btn_ir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amain_btn_ir"
            android:textAllCaps="false"
            android:visibility="invisible"
            />



    </LinearLayout>


</LinearLayout>
