<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context="mx.nitrogena.dadm.mod5.nasa.DetailActivity"
    android:orientation="vertical">




    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_top">
        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="@string/adetail_tv_cameraFullName"/>-->
    <TextView
        android:id="@+id/adetail_tv_cameraFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adetail_tv_cameraFullName"
        android:textSize="@dimen/fitemlist_favoritemr_tituloSize"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adetail_tv_earthDate"
            android:textStyle="italic"/>
    <TextView
        android:id="@+id/adetail_tv_earthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adetail_tv_earthDate"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adetail_tv_roverLandingdate"
            android:textStyle="italic"/>
    <TextView
        android:id="@+id/adetail_tv_roverLandingdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adetail_tv_roverLandingdate"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/adetail_iv_img"
        android:layout_width="@dimen/adetail_iv_img_width"
        android:layout_height="@dimen/adetail_iv_img_height"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/adetail_btn_regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/adetail_btn_regresar"/>

</LinearLayout>
